@@ -8,7 +8,7 @@
     \_/      |/      | \_/ \_/ |   V   | \_/ |  \ 
 
      Mesmer: Master Equation Solver for Multi-Energy well Reactions
-     Mesmer v2.0 compiled: -- Apr  2 2013 -- 17:32:18
+     Mesmer v3.0 compiled: -- May  6 2013 -- 13:08:15
 
      Copyright (C) 2009-2013 by
      Struan H. Robertson, David R. Glowacki, Chi-Hsiu Liang,
@@ -30,7 +30,7 @@
 Parsing input xml file...
 UnitTests.xml
 
-Write metadata 20130402_173845
+Write metadata 20130506_131027
 
 File: "UnitTests.xml" successfully parsed.
 Main Calculation begins
@@ -56,6 +56,6 @@ Number of grains produced : 4939
 In AcO2 Asymmetric Top: The default value of me:frequenciesScaleFactor was used.
 In AcO2 Asymmetric Top: The default value of spinMultiplicity (or one of its attributes) was used.
 In AcO2 Asymmetric Top: m_ZPE was not defined but requested in AcO2 Asymmetric Top. Default value 0 is given.
- -- Total time elapsed: 53 seconds.
+ -- Total time elapsed: 8 seconds.
 
 System saved to out.xml
