@@ -102,6 +102,266 @@
             1.9         -0.741         -0.741
             2.1          0.861          0.861
 
+  Test: Linear Algebra: double
+  ----------------------------
+
+Test matrix 1
+{
+           -1.5              1              0
+              0       -1.66667              1
+              1              1              1
+}
+
+Inverse of Test matrix 1
+{
+      -0.533333           -0.2            0.2
+            0.2           -0.3            0.3
+       0.333333            0.5            0.5
+}
+
+Test matrix 2
+{
+            -13              2              4
+              3            -12              6
+             10             10            -10
+}
+
+Symmetrized test matrix 2
+{
+            -13        2.44949        6.32456
+        2.44949            -12        7.74597
+        6.32456        7.74597            -10
+}
+
+Eigenvectors of symmetrized test matrix 2
+{
+       0.447214       0.774597      -0.447214
+       0.547723      -0.632456      -0.547723
+      -0.707107   2.96059e-016      -0.707107
+}
+
+  Eigenvalues:
+  ------------
+            -20
+            -15
+    1.5543e-015
+
+Right eigenvectors of test matrix 2
+{
+            0.2        0.34641           -0.2
+            0.3       -0.34641           -0.3
+           -0.5   2.09346e-016           -0.5
+}
+
+Left eigenvectors of test matrix 2
+{
+              1              1             -1
+        1.73205        -1.1547   4.18691e-016
+             -1             -1             -1
+}
+
+Check: Left * Right = Identity
+{
+              1   2.77556e-017              0
+  -5.55112e-017              1   5.55112e-017
+   1.66533e-016   2.22045e-016              1
+}
+
+  Test: Linear Algebra: long-double
+  ---------------------------------
+
+Test matrix 1
+{
+           -1.5              1              0
+              0       -1.66667              1
+              1              1              1
+}
+
+Inverse of Test matrix 1
+{
+      -0.533333           -0.2            0.2
+            0.2           -0.3            0.3
+       0.333333            0.5            0.5
+}
+
+Test matrix 2
+{
+            -13              2              4
+              3            -12              6
+             10             10            -10
+}
+
+Symmetrized test matrix 2
+{
+            -13        2.44949        6.32456
+        2.44949            -12        7.74597
+        6.32456        7.74597            -10
+}
+
+Eigenvectors of symmetrized test matrix 2
+{
+       0.447214       0.774597      -0.447214
+       0.547723      -0.632456      -0.547723
+      -0.707107   2.96059e-016      -0.707107
+}
+
+  Eigenvalues:
+  ------------
+            -20
+            -15
+    1.5543e-015
+
+Right eigenvectors of test matrix 2
+{
+            0.2        0.34641           -0.2
+            0.3       -0.34641           -0.3
+           -0.5   2.09346e-016           -0.5
+}
+
+Left eigenvectors of test matrix 2
+{
+              1              1             -1
+        1.73205        -1.1547   4.18691e-016
+             -1             -1             -1
+}
+
+Check: Left * Right = Identity
+{
+              1   2.77556e-017              0
+  -5.55112e-017              1   5.55112e-017
+   1.66533e-016   2.22045e-016              1
+}
+
+  Test: Linear Algebra: double-double
+  -----------------------------------
+
+Test matrix 1
+{
+ -1.500000e+000  1.000000e+000  0.000000e+000
+  0.000000e+000 -1.666667e+000  1.000000e+000
+  1.000000e+000  1.000000e+000  1.000000e+000
+}
+
+Inverse of Test matrix 1
+{
+ -5.333333e-001 -2.000000e-001  2.000000e-001
+  2.000000e-001 -3.000000e-001  3.000000e-001
+  3.333333e-001  5.000000e-001  5.000000e-001
+}
+
+Test matrix 2
+{
+ -1.300000e+001  2.000000e+000  4.000000e+000
+  3.000000e+000 -1.200000e+001  6.000000e+000
+  1.000000e+001  1.000000e+001 -1.000000e+001
+}
+
+Symmetrized test matrix 2
+{
+ -1.300000e+001  2.449490e+000  6.324555e+000
+  2.449490e+000 -1.200000e+001  7.745967e+000
+  6.324555e+000  7.745967e+000 -1.000000e+001
+}
+
+Eigenvectors of symmetrized test matrix 2
+{
+  4.472136e-001  7.745967e-001 -4.472136e-001
+  5.477226e-001 -6.324555e-001 -5.477226e-001
+ -7.071068e-001  2.629536e-032 -7.071068e-001
+}
+
+  Eigenvalues:
+  ------------
+  -2.00000e+001
+  -1.50000e+001
+  -2.22045e-016
+
+Right eigenvectors of test matrix 2
+{
+  2.000000e-001  3.464102e-001 -2.000000e-001
+  3.000000e-001 -3.464102e-001 -3.000000e-001
+ -5.000000e-001  1.859363e-032 -5.000000e-001
+}
+
+Left eigenvectors of test matrix 2
+{
+  1.000000e+000  1.000000e+000 -1.000000e+000
+  1.732051e+000 -1.154701e+000  3.718726e-032
+ -1.000000e+000 -1.000000e+000 -1.000000e+000
+}
+
+Check: Left * Right = Identity
+{
+  1.000000e+000  4.622232e-033  0.000000e+000
+ -1.540744e-033  1.000000e+000 -4.622232e-033
+  1.078521e-032  1.540744e-032  1.000000e+000
+}
+
+  Test: Linear Algebra: quad-double
+  ---------------------------------
+
+Test matrix 1
+{
+ -1.500000e+000  1.000000e+000  0.000000e+000
+  0.000000e+000 -1.666667e+000  1.000000e+000
+  1.000000e+000  1.000000e+000  1.000000e+000
+}
+
+Inverse of Test matrix 1
+{
+ -5.333333e-001 -2.000000e-001  2.000000e-001
+  2.000000e-001 -3.000000e-001  3.000000e-001
+  3.333333e-001  5.000000e-001  5.000000e-001
+}
+
+Test matrix 2
+{
+ -1.300000e+001  2.000000e+000  4.000000e+000
+  3.000000e+000 -1.200000e+001  6.000000e+000
+  1.000000e+001  1.000000e+001 -1.000000e+001
+}
+
+Symmetrized test matrix 2
+{
+ -1.300000e+001  2.449490e+000  6.324555e+000
+  2.449490e+000 -1.200000e+001  7.745967e+000
+  6.324555e+000  7.745967e+000 -1.000000e+001
+}
+
+Eigenvectors of symmetrized test matrix 2
+{
+  4.472136e-001  7.745967e-001 -4.472136e-001
+  5.477226e-001 -6.324555e-001 -5.477226e-001
+ -7.071068e-001  1.342040e-064 -7.071068e-001
+}
+
+  Eigenvalues:
+  ------------
+  -2.00000e+001
+  -1.50000e+001
+  -2.22045e-016
+
+Right eigenvectors of test matrix 2
+{
+  2.000000e-001  3.464102e-001 -2.000000e-001
+  3.000000e-001 -3.464102e-001 -3.000000e-001
+ -5.000000e-001  9.489658e-065 -5.000000e-001
+}
+
+Left eigenvectors of test matrix 2
+{
+  1.000000e+000  1.000000e+000 -1.000000e+000
+  1.732051e+000 -1.154701e+000  1.897932e-064
+ -1.000000e+000 -1.000000e+000 -1.000000e+000
+}
+
+Check: Left * Right = Identity
+{
+  1.000000e+000  4.747784e-066 -1.008904e-065
+ -1.424335e-065  1.000000e+000 -1.839766e-065
+  1.424335e-065  4.747784e-066  1.000000e+000
+}
+
   MEIC Test: "Test Molecule" Harmonic oscillators + rotors.
   ---------------------------------------------------------
 
